# ffmpeg-rs

./: README.md
fftools/: Makefile  ffmpeg.c  ffmpeg_utils.c  ffmpeg_vars.c
rust/: Cargo.toml  build.rs
rust/src/: avdevice.rs  avformat.rs  avutil.rs  avutil_bprint.rs  avutil_error.rs  avutil_log.rs  avutil_time.rs  ffmpeg.rs  ffmpeg_h.rs  ffmpeg_sched.rs  ffmpeg_utils.rs
rust/src/bindings/: avdevice.rs  avformat.rs  avutil.rs  avutil_bprint.rs  avutil_error.rs  avutil_log.rs  avutil_mem.rs  avutil_time.rs  ffmpeg_h.rs  ffmpeg_sched.rs  ffmpeg_utils.rs
